Refactor.